--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/New folder.loader.js";
+      var loaderUrl = buildUrl + "/test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/New folder.data.br",
-        frameworkUrl: buildUrl + "/New folder.framework.js.br",
-        codeUrl: buildUrl + "/New folder.wasm.br",
+        dataUrl: buildUrl + "/test.data.br",
+        frameworkUrl: buildUrl + "/test.framework.js.br",
+        codeUrl: buildUrl + "/test.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (4)",
