--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test.data.br",
-        frameworkUrl: buildUrl + "/test.framework.js.br",
-        codeUrl: buildUrl + "/test.wasm.br",
+        dataUrl: buildUrl + "/test.data",
+        frameworkUrl: buildUrl + "/test.framework.js",
+        codeUrl: buildUrl + "/test.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (4)",
